tests/ui/issues/issue-39848.stderr
error: expected `{`, found `foo`
  --> $DIR/issue-39848.rs:3:21
   |
LL | / macro_rules! get_opt {
LL | |     ($tgt:expr, $field:ident) => {
LL | |         if $tgt.has_$field() {}
   | |                     ^^^^^^ expected `{`
LL | |     }
LL | | }
   | |_- in this expansion of `get_opt!`
...
LL |       get_opt!(bar, foo);
   |       ------------------ in this macro invocation
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/issue-39848.rs:3:12
   |
LL | / macro_rules! get_opt {
LL | |     ($tgt:expr, $field:ident) => {
LL | |         if $tgt.has_$field() {}
   | |            ^^^^^^^^^
LL | |     }
LL | | }
   | |_- in this expansion of `get_opt!`
...
LL |       get_opt!(bar, foo);
   |       ------------------ in this macro invocation
help: try placing this code inside a block
   |
LL |         if $tgt.has_{ $field() } {}
   |                     +          +

error: aborting due to previous error

